--- a/app/src/main/res/layout/fragment_bet_record.xml
+++ b/app/src/main/res/layout/fragment_bet_record.xml
@@ -50,8 +50,9 @@
             <ImageView
                 android:id="@+id/iv_logo"
                 android:layout_width="wrap_content"
-                android:layout_height="32dp"
+                android:layout_height="34dp"
                 android:layout_marginStart="@dimen/margin_10"
+                android:layout_marginBottom="3dp"
                 android:adjustViewBounds="true"
                 android:contentDescription="@null"
                 android:scaleType="fitStart"
@@ -124,6 +125,7 @@
                 android:gravity="center"
                 android:text="@string/settled_order"
                 android:textColor="@color/color_FFFFFF_414655"
+                android:textFontWeight="500"
                 android:textSize="@dimen/textSize14sp" />
 
             <TextView
@@ -134,6 +136,7 @@
                 android:gravity="center"
                 android:text="@string/not_settled"
                 android:textColor="@color/color_6C7BA8_6C7BA8"
+                android:textFontWeight="500"
                 android:textSize="@dimen/textSize14sp" />
 
         </LinearLayout>
