--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -435,6 +435,7 @@
     <color name="color_EBEDF0">#EBEDF0</color>
     <color name="color_181922">#181922</color>
     <color name="color_E3E3E3">#E3E3E3</color>
+    <color name="color_F1A027">#F1A027</color>
 
     <!--region keyboard-->
     <color name="color_43546F">#43546F</color>
