--- a/app/src/main/res/drawable/bg_yellow_radius_15.xml
+++ b/app/src/main/res/drawable/bg_yellow_radius_15.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <shape xmlns:android="http://schemas.android.com/apk/res/android"
     android:shape="rectangle">
-    <solid android:color="@color/color_131932_F0F5FA" />
-    <size android:height="6dp" />
+    <solid android:color="@color/color_F1A027" />
+    <corners android:radius="15dp" />
 </shape>
