--- a/app/src/main/res/layout/activity_league_select.xml
+++ b/app/src/main/res/layout/activity_league_select.xml
@@ -39,6 +39,7 @@
             android:layout_height="wrap_content"
             android:layout_gravity="center_vertical|right"
             android:layout_marginRight="@dimen/margin_10"
+            app:cardElevation="1dp"
             app:cardCornerRadius="@dimen/margin_10"
             app:cardBackgroundColor="@color/color_bbbbbb_ffffff">
 
@@ -86,7 +87,7 @@
             android:id="@+id/tv_all_select"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginLeft="@dimen/margin_15"
+            android:layout_marginLeft="@dimen/margin_20"
             android:textSize="@dimen/textSize14sp"
             android:textColor="@color/color_025BE8"
             android:text="@string/select_all" />
@@ -95,8 +96,8 @@
             android:id="@+id/tv_reverse_select"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginLeft="@dimen/margin_15"
-            android:layout_marginRight="@dimen/margin_15"
+            android:layout_marginLeft="@dimen/margin_20"
+            android:layout_marginRight="@dimen/margin_20"
             android:textSize="@dimen/textSize14sp"
             android:textColor="@color/color_025BE8"
             android:text="@string/reverse_select" />
@@ -113,7 +114,7 @@
             android:layout_weight="1"
             android:singleLine="true"
             android:ellipsize="end"
-            android:layout_marginLeft="@dimen/margin_10"
+            android:layout_marginLeft="@dimen/margin_20"
             android:layout_marginRight="@dimen/margin_10"
             android:textSize="@dimen/textSize14sp"
             android:textColor="@color/color_414655"
@@ -122,6 +123,7 @@
 
         <Button
             android:id="@+id/btn_sure"
+            style="@style/Widget.AppCompat.Button.Borderless"
             android:layout_width="73dp"
             android:layout_height="32dp"
             android:layout_marginRight="@dimen/margin_14"
