--- a/app/src/main/res/layout/activity_register_ok.xml
+++ b/app/src/main/res/layout/activity_register_ok.xml
@@ -5,9 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent">
 
-    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-        xmlns:app="http://schemas.android.com/apk/res-auto"
-        xmlns:tools="http://schemas.android.com/tools"
+    <LinearLayout
         android:id="@+id/lin_root"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
@@ -128,7 +126,7 @@
                         android:layout_height="wrap_content"
                         android:layout_marginTop="4dp"
                         app:endIcon="@drawable/ic_eye_close"
-                        app:hintText="@string/hint_register_password"
+                        app:hintText="@string/error_register_password"
                         app:isResponsiveIconColor="false"
                         app:labelText="@string/login_password"
                         app:labelTextStyle="normal"
