--- a/app/src/main/res/layout/bet_bar_layout.xml
+++ b/app/src/main/res/layout/bet_bar_layout.xml
@@ -35,6 +35,7 @@
         android:layout_height="wrap_content"
         android:layout_marginStart="6dp"
         android:text="@string/bet_slip"
+        android:textFontWeight="500"
         android:textColor="@color/color_FFFFFF_414655"
         android:textSize="@dimen/textSize14sp"
         app:layout_constraintBottom_toBottomOf="parent"
@@ -72,6 +73,8 @@
         android:layout_marginEnd="@dimen/margin_2"
         android:textColor="@color/color_FFFFFF_414655"
         android:textSize="@dimen/textSize16sp"
+        android:textFontWeight="700"
+        android:fontFamily="@font/din_font"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toStartOf="@id/tv_balance"
         app:layout_constraintTop_toTopOf="parent"
@@ -84,6 +87,8 @@
         android:layout_marginEnd="@dimen/margin_10"
         android:textColor="@color/color_FFFFFF_414655"
         android:textSize="@dimen/textSize18sp"
+        android:textFontWeight="700"
+        android:fontFamily="@font/din_font"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toStartOf="@id/iv_arrow"
         app:layout_constraintTop_toTopOf="parent"
