--- a/app/src/main/res/layout/fragment_bet_station.xml
+++ b/app/src/main/res/layout/fragment_bet_station.xml
@@ -360,9 +360,9 @@
                     android:layout_marginTop="10dp"
                     android:layout_marginBottom="10dp"
                     android:text="@string/finance_list_no_record"
-                    android:textColor="@color/color_BBBBBB_333333"
-                    android:textSize="@dimen/textSize14sp"
-                    android:textStyle="bold"
+                    android:textColor="@color/color_6C7BA8_A7B2C4"
+                    android:textSize="@dimen/textSize16sp"
+                    android:textFontWeight="400"
                     app:layout_constraintEnd_toEndOf="@id/list_no_record_img"
                     app:layout_constraintStart_toStartOf="@id/list_no_record_img"
                     app:layout_constraintTop_toBottomOf="@id/list_no_record_img" />
