--- a/app/src/main/res/layout/fragment_favorite.xml
+++ b/app/src/main/res/layout/fragment_favorite.xml
@@ -46,6 +46,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="32dp"
                 android:layout_marginStart="@dimen/margin_10"
+                android:layout_marginBottom="3dp"
                 android:adjustViewBounds="true"
                 android:contentDescription="@null"
                 android:scaleType="fitStart"
@@ -58,8 +59,8 @@
                 android:layout_weight="1"
                 android:layout_marginLeft="10dp"
                 android:layout_marginRight="@dimen/margin_15"
-                layout="@layout/view_search"
-                android:visibility="visible" />
+                layout="@layout/view_search_white"
+                android:visibility="invisible" />
 
             <LinearLayout
                 android:id="@+id/cl_bet_all_sports"
