--- a/app/src/main/res/layout/item_league.xml
+++ b/app/src/main/res/layout/item_league.xml
@@ -7,6 +7,11 @@
     android:background="@color/color_bbbbbb_ffffff"
     tools:ignore="SpUsage,ContentDescription,WebViewLayout,UnusedAttribute">
 
+    <View
+        android:layout_width="match_parent"
+        android:layout_height="0.5dp"
+        android:background="@color/color_D3DEF5" />
+
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="30dp"
@@ -23,7 +28,6 @@
             android:layout_width="20dp"
             android:layout_height="20dp"
             android:layout_marginLeft="9dp"
-            android:padding="3dp"
             android:scaleType="centerCrop"
             android:src="@drawable/ic_earth" />
 
@@ -53,7 +57,7 @@
     <View
         android:layout_width="match_parent"
         android:layout_height="0.5dp"
-        android:background="@color/color_E8EFFD" />
+        android:background="@color/color_D3DEF5" />
 
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/league_odd_list"
@@ -64,4 +68,8 @@
         tools:itemCount="1"
         tools:listitem="@layout/item_sport_odd" />
 
+    <View
+        android:layout_width="match_parent"
+        android:layout_height="0.5dp"
+        android:background="@color/color_D3DEF5" />
 </LinearLayout>
