--- a/app/src/main/res/layout/item_sport_favorite.xml
+++ b/app/src/main/res/layout/item_sport_favorite.xml
@@ -6,7 +6,7 @@
     android:layout_height="wrap_content"
     android:layout_margin="@dimen/margin_1"
     android:background="@drawable/bg_gray_stoke_radius_8"
-    app:cardElevation="0dp"
+    app:cardElevation="1dp"
     app:cardBackgroundColor="@color/color_bbbbbb_ffffff"
     app:cardCornerRadius="8dp">
 
@@ -98,10 +98,10 @@
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:layout_marginRight="@dimen/margin_5"
-                        android:fontFamily="@font/din_bold"
+                        android:fontFamily="@font/din_font"
                         android:textColor="@color/color_6C7BA8"
+                        android:textFontWeight="700"
                         android:textSize="@dimen/textSize10sp"
-                        android:textStyle="bold"
                         tools:text="00:43"
                         tools:visibility="visible" />
 
