--- a/app/src/main/res/layout/item_sport_odd.xml
+++ b/app/src/main/res/layout/item_sport_odd.xml
@@ -6,7 +6,6 @@
     android:layout_height="wrap_content"
     android:background="@color/color_bbbbbb_ffffff"
     android:orientation="vertical">
-
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
@@ -39,7 +38,8 @@
                         android:id="@+id/league_odd_match_favorite"
                         android:layout_width="14dp"
                         android:layout_height="14dp"
-                        android:layout_marginRight="@dimen/margin_9"
+                        android:layout_marginBottom="1dp"
+                        android:layout_marginRight="@dimen/margin_8"
                         android:src="@drawable/selector_star_v4"
                         tools:ignore="ContentDescription"
                         tools:visibility="visible" />
@@ -67,10 +67,10 @@
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
                             android:layout_marginRight="@dimen/margin_5"
-                            android:fontFamily="@font/din_bold"
+                            android:fontFamily="@font/din_font"
                             android:textColor="@color/color_6C7BA8"
+                            android:textFontWeight="700"
                             android:textSize="@dimen/textSize10sp"
-                            android:textStyle="bold"
                             tools:text="00:43"
                             tools:visibility="visible" />
 
@@ -106,6 +106,7 @@
                             android:textColor="@color/color_6C7BA8"
                             android:textSize="@dimen/textSize10sp"
                             android:visibility="gone"
+                            android:singleLine="true"
                             app:layout_constraintTop_toBottomOf="@+id/barrier"
                             tools:text="5盘3胜"
                             tools:visibility="visible" />
@@ -590,11 +591,16 @@
             </LinearLayout>
 
         </LinearLayout>
+
+        <View
+            android:layout_width="match_parent"
+            android:layout_height="0.5dp"
+            android:background="@color/color_D3DEF5" />
     </LinearLayout>
 
     <View
         android:layout_width="match_parent"
-        android:layout_height="0.5dp"
+        android:layout_height="1dp"
         android:layout_marginTop="30dp"
         android:background="@drawable/bg_dash_hor"
         android:layerType="software" />
