--- a/app/src/main/res/layout/itemview_game_no_record.xml
+++ b/app/src/main/res/layout/itemview_game_no_record.xml
@@ -24,7 +24,7 @@
         android:text="@string/finance_list_no_record"
         android:textColor="@color/color_6C7BA8_A7B2C4"
         android:textSize="@dimen/textSize16sp"
-        android:textStyle="bold"
+        android:textFontWeight="400"
         app:layout_constraintEnd_toEndOf="@id/list_no_record_img"
         app:layout_constraintStart_toStartOf="@id/list_no_record_img"
         app:layout_constraintBottom_toBottomOf="@id/list_no_record_img" />
