--- a/app/src/main/res/layout/view_toolbar_home.xml
+++ b/app/src/main/res/layout/view_toolbar_home.xml
@@ -25,6 +25,7 @@
         android:layout_width="wrap_content"
         android:layout_height="32dp"
         android:layout_marginStart="@dimen/margin_10"
+        android:layout_marginBottom="3dp"
         android:adjustViewBounds="true"
         android:contentDescription="@null"
         android:scaleType="fitStart"
@@ -39,17 +40,34 @@
         layout="@layout/view_search" />
 
     <TextView
-        android:id="@+id/btn_login"
-        android:layout_width="wrap_content"
-        android:layout_height="22dp"
+        android:id="@+id/btn_register"
+        android:layout_width="80dp"
+        android:layout_height="30dp"
         android:paddingHorizontal="@dimen/dp_10"
-        android:minWidth="64dp"
+        android:singleLine="true"
+        android:ellipsize="end"
+        android:gravity="center"
+        android:layout_marginLeft="@dimen/margin_10"
+        android:background="@drawable/bg_yellow_radius_15"
+        android:textColor="@color/color_FFFFFF"
+        android:textSize="14sp"
+        android:text="@string/btn_register"
+        android:visibility="gone"
+        tools:visibility="visible" />
+
+    <TextView
+        android:id="@+id/btn_login"
+        android:layout_width="80dp"
+        android:layout_height="30dp"
+        android:paddingHorizontal="@dimen/dp_10"
+        android:singleLine="true"
+        android:ellipsize="end"
         android:gravity="center"
         android:layout_marginLeft="@dimen/margin_16"
-        android:background="@drawable/bg_btn_login_radius_11"
+        android:background="@drawable/bg_green_radius_15"
         android:textColor="@color/color_FFFFFF"
-        android:textSize="10sp"
-        android:text="@string/register_and_login"
+        android:textSize="14sp"
+        android:text="@string/btn_login"
         android:visibility="gone"
         tools:visibility="visible" />
 </LinearLayout>
