--- a/app/src/main/res/layout/activity_money_recharge.xml
+++ b/app/src/main/res/layout/activity_money_recharge.xml
@@ -17,6 +17,7 @@
 
 
         <org.cxct.sportlottery.ui.common.CustomTabLayout
+            android:paddingHorizontal="@dimen/margin_40"
             android:id="@+id/custom_tab_layout"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
