--- a/app/src/main/res/layout/fragment_bank_list.xml
+++ b/app/src/main/res/layout/fragment_bank_list.xml
@@ -15,6 +15,7 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content">
         <TextView
+            android:id="@+id/tv_money_card_type"
             android:textSize="@dimen/textSize20sp"
             android:text="@string/my_bank_card"
             android:textColor="@color/color_414655"
@@ -89,6 +90,7 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"/>
                 <TextView
+                    android:id="@+id/tv_add_money_card_type"
                     android:layout_marginLeft="@dimen/dp_4"
                     android:text="@string/add_credit_or_virtual"
                     android:textSize="@dimen/textSize16sp"
