--- a/app/src/main/res/layout/fragment_money_transfer_record.xml
+++ b/app/src/main/res/layout/fragment_money_transfer_record.xml
@@ -81,8 +81,7 @@
         android:id="@+id/ll_group"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginLeft="@dimen/margin_10"
-        android:layout_marginRight="@dimen/margin_10"
+        android:layout_marginHorizontal="@dimen/margin_20"
         android:background="@drawable/bg_square_shape_6dp_gray_deposit_stroke"
         android:orientation="vertical"
         android:layout_marginTop="@dimen/margin_10"
