--- a/app/src/main/res/layout/crypto_pay_fragment.xml
+++ b/app/src/main/res/layout/crypto_pay_fragment.xml
@@ -613,13 +613,13 @@
 
 
         </androidx.cardview.widget.CardView>
-
         <Button
             android:id="@+id/btn_submit"
             android:layout_width="match_parent"
             android:layout_height="44dp"
             android:layout_marginTop="20dp"
-            android:background="@drawable/bg_radius_20_button_dusk"
+            android:layout_marginHorizontal="@dimen/margin_20"
+            android:background="@drawable/ic_submit"
             android:gravity="center"
             android:text="@string/submit"
             android:textColor="@color/color_FFFFFF_FFFFFF"
