--- a/app/src/main/res/layout/crypto_pay_fragment.xml
+++ b/app/src/main/res/layout/crypto_pay_fragment.xml
@@ -461,26 +461,30 @@
 
 
         </androidx.cardview.widget.CardView>
+<LinearLayout
+    android:orientation="vertical"
+    android:layout_marginTop="10dp"
+    android:layout_width="match_parent"
+    android:layout_height="wrap_content">
+    <TextView
+        android:layout_marginStart="@dimen/margin_14"
+        android:id="@+id/tv_fee_rate"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="@string/hint_fee_rate"
+        android:textColor="@color/color_E44438_e44438"
+        android:textSize="@dimen/textSize12sp" />
 
-        <TextView
-            android:layout_marginStart="@dimen/margin_14"
-            android:id="@+id/tv_fee_rate"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginTop="10dp"
-            android:text="@string/hint_fee_rate"
-            android:textColor="@color/color_E44438_e44438"
-            android:textSize="@dimen/textSize12sp" />
+    <TextView
+        android:layout_marginStart="@dimen/margin_14"
+        android:id="@+id/tv_fee_amount"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="@string/hint_fee_amount"
+        android:textColor="@color/color_E44438_e44438"
+        android:textSize="@dimen/textSize12sp" />
+</LinearLayout>
 
-        <TextView
-            android:layout_marginStart="@dimen/margin_14"
-            android:id="@+id/tv_fee_amount"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginTop="10dp"
-            android:text="@string/hint_fee_amount"
-            android:textColor="@color/color_E44438_e44438"
-            android:textSize="@dimen/textSize12sp" />
         <androidx.cardview.widget.CardView
             android:layout_marginHorizontal="@dimen/margin_14"
             app:cardCornerRadius="@dimen/margin_8"
