--- a/app/src/main/res/layout/crypto_pay_fragment.xml
+++ b/app/src/main/res/layout/crypto_pay_fragment.xml
@@ -329,35 +329,38 @@
         </androidx.cardview.widget.CardView>
         <!-- 充值個數 -->
         <org.cxct.sportlottery.ui.login.LoginEditText
-
-            app:cvTextColor="@color/color_9FADC6_535D76"
             android:id="@+id/et_recharge_amount"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
+            app:cvTextColor="@color/color_9FADC6_535D76"
             android:layout_marginTop="15dp"
             android:paddingStart="4dp"
             app:cvHint="@string/edt_hint_crypto_pay_count"
             app:cvInputType="number"
             app:cvTitle="@string/txv_recharge_count" />
+        <LinearLayout
+            android:orientation="vertical"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content">
+            <TextView
+                android:id="@+id/tv_rate"
+                android:layout_marginStart="@dimen/margin_14"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="@string/hint_rate"
+                android:textColor="@color/color_E44438_e44438"
+                android:textSize="@dimen/textSize12sp" />
 
-        <TextView
-            android:id="@+id/tv_rate"
-            android:layout_marginStart="@dimen/margin_14"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="@string/hint_rate"
-            android:textColor="@color/color_E44438_e44438"
-            android:textSize="@dimen/textSize12sp" />
+            <TextView
+                android:layout_marginStart="@dimen/margin_14"
+                android:id="@+id/tv_recharge_money"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="@string/txv_recharge_money"
+                android:textColor="@color/color_E44438_e44438"
+                android:textSize="@dimen/textSize12sp" />
+        </LinearLayout>
 
-        <TextView
-            android:layout_marginStart="@dimen/margin_14"
-            android:id="@+id/tv_recharge_money"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="@string/txv_recharge_money"
-            android:textColor="@color/color_E44438_e44438"
-            android:textSize="@dimen/textSize12sp"
-            android:layout_marginTop="10dp"/>
 
         <!-- 區塊鏈交易ID -->
         <org.cxct.sportlottery.ui.login.LoginEditText
